--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
                         <img src="./img/logo.png">
                     </div>
                     <div class="nav_right">
-                        <button type="button" class="bg_red">Become a member</button>
-                        <abbr title="Search"> <a href="#" class="icon"><i
-                                    class="fa fa-light fa-magnifying-glass"></i></a></abbr>
-                        <abbr title="Webcam"> <a href="#" class="icon"><i class="fa fa-light fa-video"></i></a></abbr>
-                        <abbr title="Shop"> <a href="#" class="icon"><i
-                                    class="fa fa-thin fa-cart-shopping"></i></a></abbr>
+                        <button type="button" class="bg_red"><span>Become a member</span></button>
+                        <a href="#" class="icon"><i class="fa fa-thin fa-magnifying-glass"></i> <span
+                                class="ico_text">search</span></a>
+                        <a href="#" class="icon"><i class="fa fa-light fa-video"></i><span
+                                class="ico_text">Webcam</span></a>
+                        <a href="#" class="icon"><i class="fa fa-thin fa-cart-shopping"></i><span
+                                class="ico_text">Shop</span></a>
                         <div class="dropdown">
                             <button class="dropbtn">English
-                                <i class="fa fa-caret-down"></i>
+                                <i class="fa fa-caret-down"></i><span class="ico_text2">Deutsch</span>
                             </button>
-                            <div class="dropdown-content">
-                                <a href="#">Deutsch</a>
-                            </div>
                         </div>
                         <a href="javascript:void(0);" class="humberg2">
                             <span class="line1"></span>
@@ -55,20 +53,17 @@
                                 <img src="./img/logo.png">
                             </div>
                             <div class="nav_right">
-                                <button type="button" class="bg_red">Become a member</button>
-                                <abbr title="Search"> <a href="#" class="icon"><i
-                                            class="fa fa-light fa-magnifying-glass"></i></a></abbr>
-                                <abbr title="Webcam"> <a href="#" class="icon"><i
-                                            class="fa fa-light fa-video"></i></a></abbr>
-                                <abbr title="Shop"> <a href="#" class="icon"><i
-                                            class="fa fa-thin fa-cart-shopping"></i></a></abbr>
+                                <button type="button" class="bg_red"><span>Become a member</span></button>
+                                <a href="#" class="icon"><i class="fa fa-thin fa-magnifying-glass"></i> <span
+                                        class="ico_text4">search</span></a>
+                                <a href="#" class="icon"><i class="fa fa-light fa-video"></i><span
+                                        class="ico_text4">Webcam</span></a>
+                                <a href="#" class="icon"><i class="fa fa-thin fa-cart-shopping"></i><span
+                                        class="ico_text4">Shop</span></a>
                                 <div class="dropdown">
                                     <button class="dropbtn">English
-                                        <i class="fa fa-caret-down"></i>
+                                        <i class="fa fa-caret-down"></i><span class="ico_text3">Deutsch</span>
                                     </button>
-                                    <div class="dropdown-content">
-                                        <a href="#">Deutsch</a>
-                                    </div>
                                 </div>
                                 <a href="javascript:void(0);" class="humberg2 humberg is-active">
                                     <span class="line1"></span>
@@ -156,7 +151,7 @@
             <div class="hero">
                 <div class="background_img"></div>
                 <div class="hero_text">
-                    <h1>SIGHTSEEING <br> FLIGHTS</h1>
+                    <h1>SIGHTSEEING FLIGHTS</h1>
                     <p>Climb aboard and embark on an unforgettable journey with us. The giants of the Alps await
                         you.
 
@@ -167,7 +162,7 @@
             <div class="hero2">
                 <div class="background2_img"></div>
                 <div class="hero2_text">
-                    <h1>WE SAVE <br> LIVES</h1>
+                    <h1>WE SAVE LIVES</h1>
                     <p>Your health is our #1 mission! Purchase an Air Zermatt Rescue Card and protect yourself with
                         cover for emergencies of all kinds.
                     <p class="bg_color">Become a member now!<i class="ico">&#8594;</i></p>
@@ -178,7 +173,7 @@
             <div class="hero3">
                 <div class="background3_img"></div>
                 <div class="hero_text">
-                    <h1>TRANSPORT <br> FLIGHTS</h1>
+                    <h1>TRANSPORT FLIGHTS</h1>
                     <p>With the efficient helicopters of Air Zermatt, we can help you to meet your schedule. Air
                         Zermatt
                         flies all the construction material directly to your construction site.
@@ -191,7 +186,7 @@
                 <div class="background4_img"></div>
                 <div class="hero2_text">
                     <div class="box3"></div>
-                    <h1>TRAINING <br> CENTER</h1>
+                    <h1>TRAINING CENTER</h1>
                     <p>Air Zermatt offers the world’s most comprehensive training program for pilots, emergency
                         physicians and paramedics.
                     <p class="bg_color">Our Courses<i class="ico">&#8594;</i></p>
@@ -274,7 +269,8 @@
             <div class="footer_container">
                 <div id="accordion">
                     <div class="accordion-item">
-                        <button class="heading"><strong>Contact</strong></button>
+                        <button class="heading"><strong>Contact</strong><i class="fa fa-thin fa-chevron-down ico23"></i>
+                        </button>
                         <div>
                             <P class="panel">Heliport Zermatt / Raron</P>
                             <P class="panel">Address Changes</P>
@@ -283,7 +279,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="heading"><strong>Services</strong></button>
+                        <button class="heading"><strong>Services</strong><i
+                                class="fa fa-thin fa-chevron-down ico23"></i></button>
                         <div>
                             <P class="panel">Heliport Zermatt / Raron</P>
                             <P class="panel">Address Changes</P>
@@ -292,7 +289,8 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="heading"><strong>Media</strong></button>
+                        <button class="heading"><strong>Media</strong><i class="fa fa-thin fa-chevron-down ico23"></i>
+                        </button>
                         <div>
                             <P class="panel">News / Press releases</P>
                             <P class="panel">Alpha Zulu</P>
@@ -301,7 +299,9 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="heading"><strong>Information</strong></button>
+                        <button class="heading"><strong>Information</strong><i
+                                class="fa fa-thin fa-chevron-down ico23"></i>
+                        </button>
                         <div>
                             <P class="panel">GTC</P>
                             <P class="panel">About</P>
@@ -309,12 +309,11 @@
                         </div>
                     </div>
                 </div>
-                <hr>
                 <div class="second_footer">
                     <div class="second_footer_first">
-                        <span class="heading"> NEWSROOM</span>
+                        <span class="heading"><strong>NEWSROOM</strong></span>
                         <P>All news at a glance</P>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-facebook social_icon2"></i></a>
+                        <a href="#" class="social2"><i class="fa fa-brands fa-facebook-f social_icon2"></i></a>
                         <a href="#" class="social2"><i class="fa fa-brands fa-instagram social_icon2"></i></a>
                         <a href="#" class="social2"><i class="fa fa-brands fa-twitter social_icon2"></i></a>
                         <a href="#" class="social2"><i class="fa fa-brands fa-linkedin social_icon2"></i></a>
@@ -329,7 +328,6 @@
                         </button>
                     </div>
                 </div>
-                <hr>
                 <div class="third_footer">
                     <div class="footer_img">
                         <img src="./img/footer3.png">
@@ -338,14 +336,13 @@
                         <img src="./img/footer.png">
                     </div>
                 </div>
-                <hr>
                 <div class="last_footer">
                     <div class="left_footer">
                         <p>© 2023 Air Zermatt AG</p>
                     </div>
                     <div class="right_footer">
                         <p>design by metaloop</p>
-                        <p>|</p>
+                        <p class="hide">|</p>
                         <p> powered by indual</p>
                     </div>
                 </div>
