--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <div class="nav_right">
                         <button type="button" class="bg_red"><span>Become a member</span></button>
                         <a href="#" class="icon"><i class="fa fa-thin fa-magnifying-glass"></i> <span
-                                class="ico_text">search</span></a>
+                                class="ico_text tooltip">search</span></a>
                         <a href="#" class="icon"><i class="fa fa-light fa-video"></i><span
-                                class="ico_text">Webcam</span></a>
+                                class="ico_text tooltip">Webcam</span></a>
                         <a href="#" class="icon"><i class="fa fa-thin fa-cart-shopping"></i><span
-                                class="ico_text">Shop</span></a>
+                                class="ico_text tooltip">Shop</span></a>
                         <div class="dropdown">
                             <button class="dropbtn">English
-                                <i class="fa fa-caret-down"></i><span class="ico_text2">Deutsch</span>
+                                <i class="fa fa-caret-down"></i><span class="ico_text2 tooltip">Deutsch</span>
                             </button>
                         </div>
                         <a href="javascript:void(0);" class="humberg2">
@@ -55,17 +55,17 @@
                             <div class="nav_right">
                                 <button type="button" class="bg_red"><span>Become a member</span></button>
                                 <a href="#" class="icon"><i class="fa fa-thin fa-magnifying-glass"></i> <span
-                                        class="ico_text4">search</span></a>
+                                        class="ico_text4 tooltip">search</span></a>
                                 <a href="#" class="icon"><i class="fa fa-light fa-video"></i><span
-                                        class="ico_text4">Webcam</span></a>
+                                        class="ico_text4 tooltip">Webcam</span></a>
                                 <a href="#" class="icon"><i class="fa fa-thin fa-cart-shopping"></i><span
-                                        class="ico_text4">Shop</span></a>
+                                        class="ico_text4 tooltip">Shop</span></a>
                                 <div class="dropdown">
                                     <button class="dropbtn">English
-                                        <i class="fa fa-caret-down"></i><span class="ico_text3">Deutsch</span>
+                                        <i class="fa fa-caret-down"></i><span class="ico_text3 tooltip">Deutsch</span>
                                     </button>
                                 </div>
-                                <a href="javascript:void(0);" class="humberg2 humberg is-active">
+                                <a href="javascript:void(0);" class="humberg2 is-active">
                                     <span class="line1"></span>
                                     <span class="line2"></span>
                                     <span class="line3"></span>
@@ -267,83 +267,90 @@
 
         <footer>
             <div class="footer_container">
-                <div id="accordion">
-                    <div class="accordion-item">
-                        <button class="heading"><strong>Contact</strong><i class="fa fa-thin fa-chevron-down ico23"></i>
-                        </button>
-                        <div>
-                            <P class="panel">Heliport Zermatt / Raron</P>
-                            <P class="panel">Address Changes</P>
-                            <P class="panel">Training Center</P>
-                            <P class="panel">Visit Heliports</P>
+                <div class="footer_inner">
+                    <div id="accordion">
+                        <div class="accordion-item">
+                            <button class="heading"><strong>Contact</strong><i
+                                    class="fa fa-thin fa-chevron-down ico23"></i>
+                            </button>
+                            <div>
+                                <P class="panel">Heliport Zermatt / Raron</P>
+                                <P class="panel">Address Changes</P>
+                                <P class="panel">Training Center</P>
+                                <P class="panel">Visit Heliports</P>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="heading"><strong>Services</strong><i
+                                    class="fa fa-thin fa-chevron-down ico23"></i></button>
+                            <div>
+                                <P class="panel">Heliport Zermatt / Raron</P>
+                                <P class="panel">Address Changes</P>
+                                <P class="panel">Training Center</P>
+                                <P class="panel">Visit Heliports</P>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="heading"><strong>Media</strong><i
+                                    class="fa fa-thin fa-chevron-down ico23"></i>
+                            </button>
+                            <div>
+                                <P class="panel">News / Press releases</P>
+                                <P class="panel">Alpha Zulu</P>
+                                <P class="panel">Media Inquiries</P>
+                                <P class="panel">Media Images</P>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="heading"><strong>Information</strong><i
+                                    class="fa fa-thin fa-chevron-down ico23"></i>
+                            </button>
+                            <div>
+                                <P class="panel">GTC</P>
+                                <P class="panel">About</P>
+                                <P class="panel">About</P>
+                            </div>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <button class="heading"><strong>Services</strong><i
-                                class="fa fa-thin fa-chevron-down ico23"></i></button>
-                        <div>
-                            <P class="panel">Heliport Zermatt / Raron</P>
-                            <P class="panel">Address Changes</P>
-                            <P class="panel">Training Center</P>
-                            <P class="panel">Visit Heliports</P>
+                    <div class="second_footer">
+                        <div class="second_footer_first">
+                            <button class="heading"><strong>NEWSROOM</strong></button>
+                            <P class="margin">All news at a glance</P>
+                            <a href="#" class="social2"><i class="fa fa-brands fa-facebook-f social_icon2"></i></a>
+                            <a href="#" class="social2"><i class="fa fa-brands fa-instagram social_icon2"></i></a>
+                            <a href="#" class="social2"><i class="fa fa-brands fa-twitter social_icon2"></i></a>
+                            <a href="#" class="social2"><i class="fa fa-brands fa-linkedin social_icon2"></i></a>
+                            <a href="#" class="social2"><i class="fa fa-brands fa-youtube social_icon2"></i></a>
+                        </div>
+                        <div class="second_footer_second">
+                            <button class="heading">NEWSLATTER SIGN UP</button>
+                            <p>Receive exciting news straight to your inbox.
+                            </p>
+                            <button type="button" class="btn-1">
+                                Subscribe to Newsletter
+                            </button>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <button class="heading"><strong>Media</strong><i class="fa fa-thin fa-chevron-down ico23"></i>
-                        </button>
-                        <div>
-                            <P class="panel">News / Press releases</P>
-                            <P class="panel">Alpha Zulu</P>
-                            <P class="panel">Media Inquiries</P>
-                            <P class="panel">Media Images</P>
+                    <div class="third_footer">
+                        <div class="footer_img">
+                            <img src="./img/footer3.png" class="img_1">
+                            <img src="./img/footer2.png" class="img_2">
+                            <img src="./img/footer1.png" class="img_1">
+                            <img src="./img/footer.png" class="img_3">
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <button class="heading"><strong>Information</strong><i
-                                class="fa fa-thin fa-chevron-down ico23"></i>
-                        </button>
-                        <div>
-                            <P class="panel">GTC</P>
-                            <P class="panel">About</P>
-                            <P class="panel">About</P>
+                    <div class="last_footer">
+                        <div class="left_footer">
+                            <p>©
+                                <script>document.write((new Date()).getFullYear());</script> Air
+                                Zermatt AG
+                            </p>
                         </div>
-                    </div>
-                </div>
-                <div class="second_footer">
-                    <div class="second_footer_first">
-                        <span class="heading"><strong>NEWSROOM</strong></span>
-                        <P>All news at a glance</P>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-facebook-f social_icon2"></i></a>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-instagram social_icon2"></i></a>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-twitter social_icon2"></i></a>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-linkedin social_icon2"></i></a>
-                        <a href="#" class="social2"><i class="fa fa-brands fa-youtube social_icon2"></i></a>
-                    </div>
-                    <div class="second_footer_second">
-                        <span class="heading">NEWSLATTER SIGN UP</span>
-                        <p>Receive exciting news straight to your inbox.
-                        </p>
-                        <button type="button" class="btn-1">
-                            Subscribe to Newsletter
-                        </button>
-                    </div>
-                </div>
-                <div class="third_footer">
-                    <div class="footer_img">
-                        <img src="./img/footer3.png">
-                        <img src="./img/footer2.png">
-                        <img src="./img/footer1.png">
-                        <img src="./img/footer.png">
-                    </div>
-                </div>
-                <div class="last_footer">
-                    <div class="left_footer">
-                        <p>© 2023 Air Zermatt AG</p>
-                    </div>
-                    <div class="right_footer">
-                        <p>design by metaloop</p>
-                        <p class="hide">|</p>
-                        <p> powered by indual</p>
+                        <div class="right_footer">
+                            <p>design by metaloop</p>
+                            <p class="hide">|</p>
+                            <p> powered by indual</p>
+                        </div>
                     </div>
                 </div>
             </div>
